6586
I can't reproduce it. Seems it has been fixed in the meantime? When I compile FooBar.scala, I get

/Users/odersky/Downloads/FooBar.scala:9: error: constructor Foo in class Foo cannot be accessed in object Bar
  new Foo(null, null)
  ^
one error found

